Imporve type classification and function matching